--- a/index.html
+++ b/index.html
@@ -13,8 +13,8 @@
 
     <!-- CSS
   –––––––––––––––––––––––––––––––––––––––––––––––––– -->
-    <link rel="stylesheet" href="/css/normalize.css">
-    <link rel="stylesheet" href="/css/skeleton.css">
+    <link rel="stylesheet" href="./css/normalize.css">
+    <link rel="stylesheet" href="./css/skeleton.css">
 
     <!-- Favicon
   –––––––––––––––––––––––––––––––––––––––––––––––––– -->
@@ -22,14 +22,14 @@
 
     <!-- JSON
   –––––––––––––––––––––––––––––––––––––––––––––––––– -->
-    <script type="text/javascript" src="/data/table.json"></script>
+    <script type="text/javascript" src="./data/table.json"></script>
 
     <!-- Javascript
   –––––––––––––––––––––––––––––––––––––––––––––––––– -->
 
-    <script type="text/javascript" src="/js/mustache.min.js"></script>
-    <script type="text/javascript" src="/js/navigo.min.js"></script>
-    <script type="text/javascript" src="/js/app.js" defer></script>
+    <script type="text/javascript" src="./js/mustache.min.js"></script>
+    <script src="//unpkg.com/navigo@6"></script>
+    <script type="text/javascript" src="./js/app.js" defer></script>
 
 </head>
 
